examples/istio/manifests/service-a.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: httpmole
          image: gcr.io/jcchavezs/httpmole:main
          ports:
            - name: web
              containerPort: 10080
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
    - name: web
      port: 10080
      targetPort: web
  selector:
    app: app-a
