examples/istio/manifests/service-b.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: mccutchen/go-httpbin
          ports:
            - name: web
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: ${APP_NAMESPACE}
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: httpbin
